Add new Case Transfer endpoints